@@ -24,5 +24,6 @@
 
 function upgrade_to_1_2_25() {
 	db_install_execute("ALTER TABLE `settings` MODIFY `name` varchar(75) not null default ''");
+	db_install_execute("ALTER TABLE `settings_user` MODIFY `name` varchar(75) not null default ''");
 }
 
